# GateContrib

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  README.md  readme.md
GATE-RTion/DoseActor/: DoseActor_Validation sheet_2018-06-19.xlsx  DoseActor_Validation_Procedure_2018-06-19.docx
GATE-RTion/DoseActor/data/: HFMaterials2014.db  PlanDescriptionFile.txt  SourceDescriptionFile.txt
GATE-RTion/DoseActor/mac/: geometryB.mac  mainA1.mac  mainA2.mac  mainA3.mac  mainA4.mac  mainB1.mac  mainB2.mac  mainC.mac  visu.mac
GATE-RTion/DoseActor2-CT/: CTvalidation.ods  Voxelized-geometry_Validation_Procedure_2019-08-20.docx  template_results.ods
GATE-RTion/DoseActor2-CT/data/: 1-voxel-bone.mhd  1-voxel-bone.raw  1-voxels.mhd  1-voxels.raw  HFMaterials2014_test.db  HU2mat-0.1.txt  HUmaterials-0.1.db  PlanDescriptionFile_1spot_offcenter.txt  PlanDescriptionFile_4spots.txt  PlanDescriptionFile_singlespot.txt  Schneider2000MaterialsTable.txt  SourceDescriptionFile.txt  actor-1voxel.mac  actor.mac  complex_phantom.mac  phantom.mhd  phantom.raw  simple_phantom.mac  voxelized_phantom.mac
GATE-RTion/DoseActor2-CT/mac/: main1voxel.mac  maincomplex.mac  visu.mac
GATE-RTion/DoseActor2-CT/output/: voxelized_1-voxels_Total-Dose.txt  voxelized_1-voxels_Total-Edep.txt  voxelized__1-voxels_emActor.txt  voxelized__1-voxels_statActor.txt
GATE-RTion/TPSPencilBeamSource/: LGPhSListProcess.C  LGPhSProcess.C  LGR_TPS-Source-Validation-Procedure.odt  OrientationTestRun.sh  listPhS.txt
GATE-RTion/TPSPencilBeamSource/data/: MyMaterials2010.db  OrientationTest_PlanDescriptionFileGTRY0.txt  OrientationTest_PlanDescriptionFileGTRY180.txt  OrientationTest_PlanDescriptionFileGTRY270.txt  OrientationTest_PlanDescriptionFileGTRY90.txt  OrientationTest_SourceDescriptionFile.txt
GATE-RTion/TPSPencilBeamSource/mac/: Actors.mac  Axes.mac  MyParameters.mac  geometry.mac  main_orientation_GTRY0.mac  main_orientation_GTRY180.mac  main_orientation_GTRY270.mac  main_orientation_GTRY90.mac  main_orientation_test.mac  verbose.mac  visu.mac  visuJAS3.mac
GATE-RTion/TPSPencilBeamSource/results/: AnalysePhSs.txt  TPS-Validation-Summary.gnumeric
dosimetry/DNA/: mixedDNA.mac  plot.C  readme.md
dosimetry/EMFields/: output2DAscii.C
dosimetry/EMFields/data/: ElectricFieldFC-600V.TABLE  GateMag3Dcm.TABLE  HFMaterials2014.db
dosimetry/EMFields/electromagnetic-field/: post-processing.py  readme.md
dosimetry/EMFields/mac/: main.mac
dosimetry/EMFields/output/: dose-PDD-Dose-Squared.root  dose-PDD-Dose-Uncertainty.root  dose-PDD-Dose.root  dose-PDD-Edep-Squared.root  dose-PDD-Edep-Uncertainty.root  dose-PDD-Edep.root  dose-mapX-Dose-Squared.root  dose-mapX-Dose-Uncertainty.root  dose-mapX-Dose.root  dose-mapX-Edep-Squared.root  dose-mapX-Edep-Uncertainty.root  dose-mapX-Edep.root  dose-mapY-Dose-Squared.root  dose-mapY-Dose-Uncertainty.root  dose-mapY-Dose.root  dose-mapY-Edep-Squared.root  dose-mapY-Edep-Uncertainty.root  dose-mapY-Edep.root  statistics.txt
dosimetry/Radiotherapy/: readme.md
dosimetry/Radiotherapy/example11/: readme.txt
dosimetry/Radiotherapy/example12/: readme.txt
dosimetry/Radiotherapy/example4/: PhS-Analysis.C
dosimetry/Radiotherapy/example5/: PhS-Analysis.C
dosimetry/Radiotherapy/example8/: comparison.C
dosimetry/Radiotherapy/example9/: comparaison.C
dosimetry/TEPCActor/: readme.txt
dosimetry/TEPCActor/data/: myGateMaterials.db
dosimetry/TEPCActor/mac/: main_optimizedTEPC.mac  visu.mac
dosimetry/TEPCActor/output/: results.txt
dosimetry/UserSpectrum/: readme.md
dosimetry/UserSpectrum/mac/: main.mac  output.mac  source.mac
dosimetry/UserSpectrum/output/: plot.C
dosimetry/dna/: README  main.mac  output.mac  physics.mac  plot.C  readme.md  source.mac
dosimetry/doseByRegions/: README
dosimetry/doseByRegions/data/: AF_GateMaterials.db  AF_LabelsToMaterials.txt  AF_UINT16_299_137_348.mhd  AF_UINT16_299_137_348.raw
dosimetry/doseByRegions/mac/: main.mac
dosimetry/dosimetry/: readme.md
dosimetry/dosimetry/brachytherapy/: readme.txt
dosimetry/gaga-phsp/: .gitattributes  .gitignore  plot_err.py  readme.md
dosimetry/gaga-phsp/data/: pth
imaging/ARF/: ARF_doc.docx  computeARFTables.mac  generateARFdata.mac  readme.md  useARFTables.mac
imaging/CT/: readme.md
imaging/ComptonCamera/: readme.md
imaging/ComptonCamera/tools/: CMakeLists.txt
imaging/ExtendedVSource/: README.md
imaging/ExtendedVSource/program/: CMakeLists.txt  Event.cpp  Event.h  Hit.cpp  Hit.h  OrthoPositroniumHistograms.cpp  OrthoPositroniumHistograms.h  ParaPositroniumHistograms.cpp  ParaPositroniumHistograms.h  PositroniumHistograms.cpp  PositroniumHistograms.h  README.md  Reader.cpp  Reader.h  Run.cpp  Selector.cpp  Selector.h  Track.cpp  Track.h  install.sh
imaging/ExtendedVSourceBranches/: readme.md
imaging/LUTDavisModel/: Materials.xml  Optical_System.mac  Surfaces.xml  readme.md
imaging/NumpyOutput/: PET_CylindricalPET_System.mac  Verbose.mac  compare_old_and_new_output.py  readme.md
imaging/Optical/: OpticalSimulation_Reference.root  Optical_System.mac  bioluminescence.mac  fluorescence.mac  readme.md
imaging/PET/: PET_CylindricalPET_System.mac  PET_Ecat_System.mac  readme.md
imaging/ROOT_Analyse/: VoxelPhantom_Analyse.C  data_PET.root  data_Voxel_Phantom.root  readme.md
imaging/SPECT/: MoveVisu.mac  SPECT.mac  Verbose.mac  readme.md  secondPart.mac
imaging/SPECT_FFD/: readme.md
imaging/Thermal/: .gitignore~  MOBY1cmTumor.i33  ThermalTherapy.mac
imaging/TimeActivityCurve/: mainMacro.mac  readme.md
imaging/TrackerDetector/: digitizer.mac  mainMacro.mac  physics.mac
imaging/fastY90/: readme.md
imaging/fluorescence/: readme.md
imaging/garf/: .gitignore  createTrace.py  readme.md
imaging/nn-arf/: readme.md
imaging_deprecated/Optical/: MakeBioluminescencePlots.C  MakeFluorescencePlots.C  bioluminescence.mac
imaging_deprecated/SPECT_FFD/: readme.md
imaging_deprecated/SPECT_GPU/: spect_cpu.mac  spect_gpu.mac
imaging_deprecated/garf/: .gitattributes  readme.md
misc/MergedVolumeActor/: README.md  main.mac
misc/TetrahedralMeshGeometry/: README.md
(+404 files in other folders)
